--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width">
     <title>Running Button!</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <style>
-        
-    </style>
+    <meta property="og:title" content="UnClickAble">
+    <meta property="og:description" content="I challenge u to click the Button">
+    <meta property="og:url" content="https://darkequinox564.github.io/UnClickAble/">
   </head>
   <body>
     <script defer src="script.js"></script>
